fixed small spacing issue on mobile projects

--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -899,6 +899,7 @@ footer {
     }
     .projects_showcase {
         width: 100%;
+        margin-bottom: 0;
     }
     .project_container:hover {
         box-shadow: none;
